# greenlit-takehome

./: .env.sample  .gitignore  main.py  pyproject.toml
core/: crud.py  database.py  main.py  models.py  schemas.py
simplecrud/: crud.py  database.py  main.py  models.py  schemas.py
