[tool.poetry]
name = "simplecrud"
version = "0.1.0"
description = "GreenLit Test Project"
authors = ["Paul Okeke <pauldiconline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
